(4.2.5p163) 2009/04/10 Released by Harlan Stenn <stenn@ntp.org>
(4.2.5p162) 2009/04/09 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Mitigation and PPS cleanup from Dave Mills.
* Include (4.2.4p7-RC2)
* [Bug 216] New interpolation scheme for Windows eliminates 1ms jitter
* remove a bunch of #ifdef SYS_WINNT from portable code
* 64-bit time_t cleanup for building on newer Windows compilers
* Only set CMOS clock during ntpd exit on Windows if the computer is
  shutting down or restarting.
* [Bug 1148] NMEA reference clock improvements
* remove deleted gsoc_sntp/utilities.o from repository so that .o build
  products can be cleaned up without corrupting the repository.
(4.2.5p161) 2009/03/31 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
(4.2.5p160) 2009/03/30 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1141] refclock_report missing braces cause spurious "peer event:
  clock clk_unspec" log entries
* Include (4.2.4p7-RC1)
(4.2.5p159) 2009/03/28 Released by Harlan Stenn <stenn@ntp.org>
* "bias" changes from Dave Mills.
(4.2.5p158) 2009/01/30 Released by Harlan Stenn <stenn@ntp.org>
* Fix [CID 72], a typo introduced at the latest fix to prettydate.c.
(4.2.5p157) 2009/01/26 Released by Harlan Stenn <stenn@ntp.org>
* Cleanup/fixes for ntp_proto.c and ntp_crypto.c from Dave Mills.
(4.2.5p156) 2009/01/19 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1118] Fixed sign extension for 32 bit time_t in caljulian() and prettydate().
  Fixed some compiler warnings about missing prototypes.
  Fixed some other simple compiler warnings.
* [Bug 1119] [CID 52] Avoid a possible null-dereference in ntp_crypto.c.
* [Bug 1120] [CID 51] INSIST that peer is non-null before we dereference it.
* [Bug 1121] [CID 47] double fclose() in ntp-keygen.c.
(4.2.5p155) 2009/01/18 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* CHU frequency updates.